Fix background overflow due to scrollbar

--- a/shopping/src/App.css
+++ b/shopping/src/App.css
@@ -9,7 +9,7 @@
 .background {
     background-image: url('./components/images/blurred-blackground.webp');
     height: calc(100vh - 83px);
-    width: calc(100vw - 15px);
+    width: 100%;
     background-size:cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -17,7 +17,7 @@
 
 .intro {
     height: calc(100vh - 83px);;
-    width: calc(100vw - 15px);
+    width: 100%;
     background-color: rgba(0,0,0,.65);
     display: flex;
     flex-flow: column;
